--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 /public/assets/
 /assets/vendor/
 ###< symfony/asset-mapper ###
+
+###< symfony/mysql_data ###
+/mysql_data
+###< symfony/mysql_data ###
+
