--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,12 +1,15 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
-    secret: '%env(APP_SECRET)%'
+    secret: "%env(APP_SECRET)%"
 
     # Note that the session will be started ONLY if you read or write from it.
     session: true
 
     #esi: true
     #fragments: true
+
+    # Custom error page
+    error_controller: App\Controller\ErrorController::index
 
 when@test:
     framework:
