ajout de login et register

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=4f3c0236858e385f03a6285750849615
 ###< symfony/framework-bundle ###
 
 ###> symfony/routing ###
